@@ -1,3 +1,8 @@
+2017-02-16  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* doc/Doxyfile.in, doc/Doxyfile_full.in: Remove 'base' from Doxygen
+	input directories.
+
 2017-02-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Finally remove last remains of base library.
